--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -12,7 +12,7 @@
         android:id="@+id/recycler_menu"
         android:scrollbars="vertical"
         android:layout_height="495dp"
-        android:layout_width="368dp"
+        android:layout_width="match_parent"
         tools:layout_editor_absoluteY="8dp"
         tools:layout_editor_absoluteX="8dp" />
 
