--- a/app/src/main/res/layout/activity_food_list.xml
+++ b/app/src/main/res/layout/activity_food_list.xml
@@ -6,4 +6,12 @@
     android:layout_height="match_parent"
     tools:context="com.flyingburritoco.mobilemenu.FoodList">
 
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/recycler_food"
+        android:scrollbars="vertical"
+
+    />
+
 </android.support.constraint.ConstraintLayout>
