--- a/app/src/main/res/layout/activity_food_detail.xml
+++ b/app/src/main/res/layout/activity_food_detail.xml
@@ -59,7 +59,7 @@
 
         />
 
-<android.support.v4.widget.NestedScrollView
+    <android.support.v4.widget.NestedScrollView
     android:id="@+id/nestedScrollView"
     android:clipToPadding="false"
     android:layout_width="match_parent"
@@ -95,11 +95,68 @@
                     android:textSize="20sp"
                     android:textStyle="bold"
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent" />
+                    android:layout_height="wrap_content" />
+
+                <LinearLayout
+                    android:id="@+id/layout_price"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    >
+
+                    <ImageView
+                        app:srcCompat="@drawable/ic_attach_money_black_24dp"
+                        android:layout_weight="1"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content" />
+
+                    <TextView
+                        android:id="@+id/food_price"
+                        android:text="1,000"
+                        android:textColor="@color/colorPrimary"
+                        android:textSize="20sp"
+                        android:textStyle="bold"
+                        android:layout_width="0dp"
+                        android:layout_weight="9"
+                        android:layout_height="wrap_content" />
+
+                </LinearLayout>
+
+                <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton
+                    android:layout_width="100dp"
+                    android:layout_height="30dp"
+                    android:id="@+id/number_button"
+                    android:layout_marginBottom="18dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginLeft="8dp"
+                    app:textSize="7sp"
+                    app:backGroundColor="@color/colorPrimary"
+                    app:initialNumber="1"
+                    app:finalNumber="20"
+                    ></com.cepheuen.elegantnumberbutton.view.ElegantNumberButton>
+
             </LinearLayout>
 
         </android.support.v7.widget.CardView>
 
+        <android.support.v7.widget.CardView
+            app:cardElevation="5dp"
+            app:cardUseCompatPadding="true"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            >
+            <TextView
+                android:id="@+id/food_description"
+                android:layout_marginTop="12dp"
+                android:lineSpacingMultiplier="1.5"
+                android:padding="12dp"
+                android:text="Description"
+                android:textColor="@android:color/black"
+                android:textSize="14sp"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent" />
+
+        </android.support.v7.widget.CardView>
     </LinearLayout>
 
 </android.support.v4.widget.NestedScrollView>
