--- a/app/src/main/res/layout/activity_food_detail.xml
+++ b/app/src/main/res/layout/activity_food_detail.xml
@@ -105,10 +105,10 @@
                     >
 
                     <ImageView
-                        app:srcCompat="@drawable/ic_attach_money_black_24dp"
-                        android:layout_weight="1"
                         android:layout_width="0dp"
-                        android:layout_height="wrap_content" />
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        app:srcCompat="@drawable/ic_attach_money_black_24dp" />
 
                     <TextView
                         android:id="@+id/food_price"
@@ -129,7 +129,7 @@
                     android:layout_marginBottom="18dp"
                     android:layout_marginTop="8dp"
                     android:layout_marginLeft="8dp"
-                    app:textSize="7sp"
+                    app:textSize="6sp"
                     app:backGroundColor="@color/colorPrimary"
                     app:initialNumber="1"
                     app:finalNumber="20"
