--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -11,9 +11,10 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_menu"
         android:scrollbars="vertical"
-        android:layout_height="495dp"
+        android:layout_height="match_parent"
         android:layout_width="match_parent"
         tools:layout_editor_absoluteY="8dp"
-        tools:layout_editor_absoluteX="8dp" />
+        tools:layout_editor_absoluteX="8dp"
+        tools:ignore="MissingConstraints" />
 
 </android.support.constraint.ConstraintLayout>
