--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -18,7 +18,7 @@
 
     <android.support.v7.widget.CardView
         android:layout_alignParentBottom="true"
-        app:cardBackgroundColor="@color/colorPrimary"
+        app:cardBackgroundColor="@android:color/white"
         android:layout_width="match_parent"
         android:layout_height="100dp">
 
@@ -36,7 +36,7 @@
                 <TextView
                     android:text="Total: "
                     android:textSize="20sp"
-                    android:textColor="@android:color/white"
+                    android:textColor="@android:color/black"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
 
@@ -44,7 +44,7 @@
                     android:id="@+id/total"
                     android:text="$10,000"
                     android:textSize="24sp"
-                    android:textColor="@android:color/white"
+                    android:textColor="@android:color/black"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
 
@@ -53,16 +53,16 @@
             <info.hoang8f.widget.FButton
                 android:id="@+id/btnPlaceOrder"
                 android:text="PlaceOrder"
-                android:textColor="@android:color/black"
+                android:textColor="@android:color/white"
                 android:layout_marginRight="8dp"
                 android:layout_marginLeft="8dp"
                 android:layout_alignParentBottom="true"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
-                app:buttonColor="@color/colorAccent"
+                app:buttonColor="@color/colorPrimary"
                 app:cornerRadius="4dp"
-                app:shadowColor="@android:color/black"
+                app:shadowColor="@android:color/white"
                 app:shadowEnabled="true"
                 app:shadowHeight="5dp"/>
 
