--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -24,5 +24,8 @@
         <item>Pico de Gallo</item>
         <item>Salsa of the Day</item>
     </string-array>
+    <string-array name="locations">
+        <item>location</item>
+    </string-array>
 
 </resources>
