Clean Up of Layouts.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,8 @@
             android:id="@+id/imageView3"
             android:layout_width="match_parent"
             android:layout_height="200dp"
-            android:src="@drawable/logo" />
+            android:src="@drawable/logo"
+            android:contentDescription="@null" />
 
         <TextView
             android:gravity="center"
