--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -34,7 +34,7 @@
                 android:layout_height="wrap_content">
 
                 <TextView
-                    android:text="Total: "
+                    android:text="@string/cartTotal"
                     android:textSize="20sp"
                     android:textColor="@android:color/black"
                     android:layout_width="wrap_content"
@@ -42,7 +42,7 @@
 
                 <TextView
                     android:id="@+id/total"
-                    android:text="$10,000"
+                    android:text="@string/price"
                     android:textSize="24sp"
                     android:textColor="@android:color/black"
                     android:layout_width="wrap_content"
