--- a/app/src/main/res/layout/activity_food_detail.xml
+++ b/app/src/main/res/layout/activity_food_detail.xml
@@ -32,7 +32,7 @@
                 />
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
-                android:title="Food Name"
+                android:title="@string/food"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 app:popupTheme="@style/AlertDialog.AppCompat.Light"
@@ -56,8 +56,7 @@
         app:pressedTranslationZ="12dp"
         app:layout_anchor="@+id/app_bar_layout"
         app:layout_anchorGravity="bottom|right|end"
-
-        />
+        tools:ignore="UnusedAttribute" />
 
     <android.support.v4.widget.NestedScrollView
     android:id="@+id/nestedScrollView"
@@ -90,7 +89,7 @@
                     android:id="@+id/food_name"
                     android:layout_marginTop="8dp"
                     android:padding="12dp"
-                    android:text="Food Name"
+                    android:text="@string/food"
                     android:textColor="@color/colorPrimary"
                     android:textSize="20sp"
                     android:textStyle="bold"
@@ -108,11 +107,12 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        app:srcCompat="@drawable/ic_attach_money_black_24dp" />
+                        app:srcCompat="@drawable/ic_attach_money_black_24dp"
+                        android:contentDescription="@null" />
 
                     <TextView
                         android:id="@+id/food_price"
-                        android:text="1,000"
+                        android:text="@string/price"
                         android:textColor="@color/colorPrimary"
                         android:textSize="20sp"
                         android:textStyle="bold"
@@ -128,12 +128,12 @@
                     android:id="@+id/number_button"
                     android:layout_marginBottom="18dp"
                     android:layout_marginTop="8dp"
-                    android:layout_marginLeft="8dp"
+                    android:layout_marginStart="8dp"
                     app:textSize="6sp"
                     app:backGroundColor="@color/colorPrimary"
                     app:initialNumber="1"
                     app:finalNumber="20"
-                    ></com.cepheuen.elegantnumberbutton.view.ElegantNumberButton>
+                    tools:ignore="SmallSp" />
 
             </LinearLayout>
 
@@ -150,7 +150,7 @@
                 android:layout_marginTop="12dp"
                 android:lineSpacingMultiplier="1.5"
                 android:padding="12dp"
-                android:text="Description"
+                android:text="@string/description"
                 android:textColor="@android:color/black"
                 android:textSize="14sp"
                 android:layout_width="wrap_content"
