--- a/app/src/main/res/layout/cart_layout.xml
+++ b/app/src/main/res/layout/cart_layout.xml
@@ -8,17 +8,9 @@
     app:cardElevation="4dp"
     >
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"
-        android:orientation="horizontal"
-        android:layout_gravity="center_vertical"
-        >
 
         <LinearLayout
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="9"
             android:orientation="vertical"
@@ -28,22 +20,22 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/itemName"
-                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
                 android:gravity="center_vertical|start"
                 android:textAllCaps="true"
                 android:textStyle="bold"
-                android:text="Food 01"
+                android:text="@string/food"
                 />
 
             <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/itemPrice"
-            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
             android:gravity="center_vertical|start"
             android:textAllCaps="true"
             android:textStyle="italic"
-            android:text="100,000"
+            android:text="@string/price"
             />
 
 
@@ -53,10 +45,8 @@
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_gravity="center_vertical|end"
-            android:layout_marginRight="16dp"
+            android:layout_marginEnd="16dp"
             android:id="@+id/itemCount"
-            />
-
-    </LinearLayout>
+            android:contentDescription="@null" />
 
 </android.support.v7.widget.CardView>
