--- a/app/src/main/res/layout/menu_item.xml
+++ b/app/src/main/res/layout/menu_item.xml
@@ -15,10 +15,11 @@
             android:scaleType="centerCrop"
             android:src="@drawable/background1"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:contentDescription="@null" />
         <TextView
             android:id="@+id/menu_name"
-            android:text="Name of Menu"
+            android:text="@string/menu"
             android:textColor="@android:color/white"
             android:background="@color/overlayBackground"
             android:textSize="20sp"
