--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/slogan"
-            android:textColor="@android:color/white" />
+            android:textColor="@android:color/white"
+            android:textSize="50sp"/>
     </LinearLayout>
 
     <LinearLayout
