Update Order Status to include return to home button.

--- a/app/src/main/res/layout/activity_order_status.xml
+++ b/app/src/main/res/layout/activity_order_status.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/background1"
     tools:context="com.flyingburritoco.mobilemenu.OrderStatus">
 
@@ -13,5 +14,22 @@
         android:layout_height="match_parent">
 
     </android.support.v7.widget.RecyclerView>
+
+    <info.hoang8f.widget.FButton
+        android:id="@+id/exitOrders"
+        android:text="Exit Orders"
+        android:textColor="@android:color/white"
+        android:layout_marginRight="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_alignParentBottom="true"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        app:buttonColor="@color/colorPrimary"
+        app:cornerRadius="3dp"
+        app:shadowColor="@android:color/darker_gray"
+        app:shadowEnabled="true"
+        app:shadowHeight="1.5dp"
+        tools:ignore="HardcodedText" />
 
 </RelativeLayout>
