--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -49,7 +49,7 @@
 
     </LinearLayout>
 
-    <info.hoang8f.widget.FButton
+    <Button
         android:id="@+id/btnSignIn"
         android:text="Sign In"
         android:textColor="@android:color/white"
@@ -59,11 +59,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        app:buttonColor="@color/btnSignIn"
-        app:cornerRadius="3dp"
-        app:shadowColor="@android:color/darker_gray"
-        app:shadowEnabled="true"
-        app:shadowHeight="1.5dp"
+        android:background="@color/btnSignIn"
         tools:ignore="HardcodedText" />
 
 </RelativeLayout>
