--- a/app/src/main/res/layout/activity_order_status.xml
+++ b/app/src/main/res/layout/activity_order_status.xml
@@ -15,7 +15,7 @@
 
     </android.support.v7.widget.RecyclerView>
 
-    <info.hoang8f.widget.FButton
+    <Button
         android:id="@+id/exitOrders"
         android:text="Exit Orders"
         android:textColor="@android:color/white"
@@ -25,11 +25,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        app:buttonColor="@color/colorPrimary"
-        app:cornerRadius="3dp"
-        app:shadowColor="@android:color/darker_gray"
-        app:shadowEnabled="true"
-        app:shadowHeight="1.5dp"
+        android:background="@color/colorPrimary"
         tools:ignore="HardcodedText" />
 
 </RelativeLayout>
