--- a/app/src/main/res/layout/cart_layout.xml
+++ b/app/src/main/res/layout/cart_layout.xml
@@ -28,6 +28,16 @@
                 />
 
             <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/itemExtras"
+                android:layout_marginStart="10dp"
+                android:gravity="center_vertical|start"
+                android:textAllCaps="true"
+                android:text="@string/extras"
+                />
+
+            <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/itemPrice"
