--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -5,26 +5,56 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background1"
-    android:padding="16dp"
     tools:context="com.flyingburritoco.mobilemenu.Cart">
 
+        <RelativeLayout
+            android:id="@+id/testCard"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@android:color/white">
+
+                <TextView
+                    android:id="@+id/orderHeader"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/orderHeader"
+                    android:textAlignment="center"
+                    android:textSize="20sp"
+                    android:paddingTop="16dp"
+                    android:paddingBottom="16dp"/>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="2dip"
+                    android:background="#000000"
+                    android:layout_below="@+id/orderHeader"/>
+
+        </RelativeLayout>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/listCart"
-        android:background="@android:color/transparent"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/testCard"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_above="@+id/totalContainer"
         />
 
     <android.support.v7.widget.CardView
         android:layout_alignParentBottom="true"
         app:cardBackgroundColor="@android:color/white"
         android:layout_width="match_parent"
-        android:layout_height="100dp">
+        android:layout_height="100dp"
+        android:id="@+id/totalContainer">
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="2dip"
+                android:background="#000000"/>
 
             <LinearLayout
                 android:layout_margin="8dp"
@@ -64,10 +94,10 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="10dp"
                     android:layout_weight="1"
-                    android:text="Place Order"
+                    android:text="@string/placeOrder"
                     android:textColor="@android:color/white"
                     android:background="@color/colorPrimary"
-                    tools:ignore="HardcodedText" />
+                    style="?android:attr/buttonBarButtonStyle"/>
 
                 <Button
                     android:id="@+id/btnCancelOrder"
@@ -75,10 +105,10 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="10dp"
                     android:layout_weight="1"
-                    android:text="Cancel Order"
+                    android:text="@string/cancelOrder"
                     android:textColor="@android:color/white"
                     android:background="@color/colorPrimary"
-                    tools:ignore="HardcodedText" />
+                    style="?android:attr/buttonBarButtonStyle"/>
 
             </LinearLayout>
 
@@ -87,4 +117,5 @@
 
 
     </android.support.v7.widget.CardView>
+
 </RelativeLayout>
