--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/slogan"
-            android:textColor="@android:color/white"
+            android:textColor="@color/white"
             android:textSize="50sp"/>
     </LinearLayout>
 
@@ -44,8 +44,8 @@
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:layout_weight="1"
-            android:text="Sign In"
-            android:textColor="@android:color/white"
+            android:text="Sign Up"
+            android:textColor="@color/white"
             android:background="@color/btnSignIn"
             tools:ignore="HardcodedText"/>
 
@@ -56,7 +56,7 @@
             android:layout_margin="10dp"
             android:layout_weight="1"
             android:text="Sign In"
-            android:textColor="@android:color/white"
+            android:textColor="@color/white"
             android:background="@color/btnSignIn"
             tools:ignore="HardcodedText"/>
 
