--- a/app/src/main/res/layout/app_bar_food_list.xml
+++ b/app/src/main/res/layout/app_bar_food_list.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.flyingburritoco.mobilemenu.testThis">
+    tools:context="com.flyingburritoco.mobilemenu.FoodList">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -21,15 +21,5 @@
     </android.support.design.widget.AppBarLayout>
 
     <include layout="@layout/content_home" />
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        android:backgroundTint="@android:color/white"
-        app:srcCompat="@drawable/ic_shopping_cart_black_24dp"
-        tools:ignore="UnusedAttribute" />
 
 </android.support.design.widget.CoordinatorLayout>
