--- a/app/src/main/res/layout/content_food_list.xml
+++ b/app/src/main/res/layout/content_food_list.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.flyingburritoco.mobilemenu.testThis"
-    tools:showIn="@layout/app_bar_test_this">
+    tools:context="com.flyingburritoco.mobilemenu.FoodList"
+    tools:showIn="@layout/app_bar_food_list">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_menu"
