--- a/app/src/main/res/layout/content_user_settings.xml
+++ b/app/src/main/res/layout/content_user_settings.xml
@@ -8,4 +8,13 @@
     tools:context="com.flyingburritoco.mobilemenu.UserSettings"
     tools:showIn="@layout/app_bar_user_settings">
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_menu"
+        android:scrollbars="vertical"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        tools:layout_editor_absoluteY="8dp"
+        tools:layout_editor_absoluteX="8dp"
+        tools:ignore="MissingConstraints" />
+
 </android.support.constraint.ConstraintLayout>
