--- a/app/src/main/res/layout/content_order_status.xml
+++ b/app/src/main/res/layout/content_order_status.xml
@@ -5,16 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".UserSettings"
-    tools:showIn="@layout/app_bar_user_settings">
+    tools:context=".OrderStatus"
+    tools:showIn="@layout/app_bar_order_status">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_menu"
-        android:scrollbars="vertical"
-        android:layout_height="match_parent"
+        android:id="@+id/listOrders"
+        android:background="@android:color/transparent"
         android:layout_width="match_parent"
-        tools:layout_editor_absoluteY="8dp"
-        tools:layout_editor_absoluteX="8dp"
-        tools:ignore="MissingConstraints" />
+        android:layout_height="match_parent">
+    </android.support.v7.widget.RecyclerView>
 
 </android.support.constraint.ConstraintLayout>
